dankbar: option to show when bar is hidden and no windows

--- a/quickshell/translations/poexports/es.json
+++ b/quickshell/translations/poexports/es.json
@@ -1685,6 +1685,9 @@
   "Hide Delay": {
     "Hide Delay": ""
   },
+  "Hide When Windows Open": {
+    "Hide When Windows Open": ""
+  },
   "Hide the dock when not in use and reveal it when hovering near the dock area": {
     "Hide the dock when not in use and reveal it when hovering near the dock area": "Ocultar el dock cuando no esté en uso y mostrarlo cuando se pasé el ratón cerca del área de este"
   },
