--- a/quickshell/translations/template.json
+++ b/quickshell/translations/template.json
@@ -1015,6 +1015,13 @@
     "comment": ""
   },
   {
+    "term": "Battery Charge Limit",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
     "term": "Battery and power management",
     "translation": "",
     "context": "",
@@ -5594,6 +5601,13 @@
   },
   {
     "term": "Not connected",
+    "translation": "",
+    "context": "",
+    "reference": "",
+    "comment": ""
+  },
+  {
+    "term": "Note: this only changes the displayed percentage, it does not actually limit charging.",
     "translation": "",
     "context": "",
     "reference": "",
